--- a/site_devWeb_2tri_definitivo/site dev web 2 trimestre definitivo/estilo-main.css
+++ b/site_devWeb_2tri_definitivo/site dev web 2 trimestre definitivo/estilo-main.css
@@ -18,6 +18,9 @@ header {
     justify-items: center;
     text-align: center;
 }
+h1{
+    text-shadow: 1px 1px 1px rgb(175, 172, 172);
+}
 nav{
     background-color: rgb(228, 228, 92);
     justify-content: space-between;
@@ -69,7 +72,9 @@ footer {
 padding: 1%;
 }
 #noticiaImg{
-    width: 100px;
-    height: 100px;
+    float: left;
+    height: 25%;
+    width: 40%;
     border: 1px solid black;
+    margin: 3%;
 }
